[AI Fix] (a11y ADA compliance): clear remaining contrast and head-structure report errors

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -18,7 +18,7 @@
 // }
 
 .post-link{
-    color:  #737373;
+    color:  #707070;
     font-weight: 700;
     font-size: 50%;
     letter-spacing: 0px;
@@ -31,11 +31,11 @@
 }
 
 .post-link:visited{
-    color:  #737373;
+    color:  #707070;
 }
 
 .post-link:hover{
-    color:  #737373;
+    color:  #707070;
 }
 
 
@@ -101,7 +101,7 @@
 }
 
 .home_post_excerpt {
-    color:  #737373;
+    color:  #707070;
     font-size: 75%;
     // height: calc(100% - 183px - 10px - 50px);
 }
